# pit-tool

./: .gitignore  README.md  pyproject.toml
cli/: background_worker.py  main.py  wizard.py
core/: generator.py  models.py  reporter.py  runner.py
core/attacks/: context_escape.yaml  data_exfiltration.yaml  direct_injection.yaml  indirect_injection.yaml  jailbreak.yaml  loader.py  role_hijacking.yaml
core/evaluator/: judge_llm.py  keyword.py
core/providers/: __init__.py  anthropic_provider.py  base.py  openai_provider.py
tests/babysitting/: system_prompt.txt  test_cases.yaml
web/: index.html
